* upgrade memcache reference to version 3.0.7
* fix amqp reference (thanks to Remi Collet)
* fix memcached reference (thanks to Remi Collet)
* fix memcache reference (thanks to Remi Collet)
* fix imagick reference (thanks to Remi Collet)
* interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
were moved form SPL to Core since PHP 5.3.0

.Bug fixes:
* none


== Version 2.10.0 (2012-11-26)

.Additions and changes:
* add 3 new references data dictionnaries related to extensions:
  igbinary, imagick, odbc
* add clear-cache sub-command to CLI version
* upgrade amqp reference to version 1.0.9
* upgrade xcache reference to version 3.0.0
* used temporary system directory rather than /tmp that does not exists by default on windows
* refactoring the documentation build phing script (split generic and specific code)
* PHP min is set (at least) to 5.3.0 when you use namespace syntax on PHP 5.2 platform
(requires PHP_Reflect 1.5.0 or greater)

.Bug fixes:
* GH-51 fix _--report-file_ option with file in current path directory
* PHP Doc link:https://bugs.php.net/bug.php?id=60638[bug 60638]
standard reference fixed: parse_url component parameter is provided since PHP 5.1.2 and not 5.2.0


== Version 2.9.0 (2012-10-29)

.Additions and changes:
* all required resources used now the default autoloader
* allow to run either a stand-alone or pear installed version
* Reports refactoring (33 percent code reduced)
* Source, Database and Reference reports
will not be print anymore on standard output when _--report-file_ option used
* CAUTION: BC breaks with API 2.8.0 with the new filter system
* *list-references* does not require _--reference_ option anymore (always used ALL)
* results of *list-references* may now be filtered
* add a full report (all results at once:
summary, extensions, interfaces, traits, classes, functions, constants, globals, tokens, conditions)
* fixed Reference interface about new filter API