@@ -24,7 +24,7 @@ content of dictionary references.
   <active>yes</active>
  </contributor>
  <date>2012-12-03</date>
- <time>15:56:25</time>
+ <time>18:08:20</time>
  <version>
   <release>2.11.0snapshot20121203</release>
   <api>2.11.0</api>
@@ -42,6 +42,9 @@ Additions and changes:
 - fix memcached reference (thanks to Remi Collet)
 - fix memcache reference (thanks to Remi Collet)
 - fix imagick reference (thanks to Remi Collet)
+- interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
+were moved form SPL to Core since PHP 5.3.0
+- SimpleXMLIterator was moved from SPL (PHP 5.2) to SimpleXml (PHP 5.3)
 
 Bug fixes:
 - none
@@ -1371,6 +1374,9 @@ Additions and changes:
 - fix memcached reference (thanks to Remi Collet)
 - fix memcache reference (thanks to Remi Collet)
 - fix imagick reference (thanks to Remi Collet)
+- interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
+were moved form SPL to Core since PHP 5.3.0
+- SimpleXMLIterator was moved from SPL (PHP 5.2) to SimpleXml (PHP 5.3)
 
 Bug fixes:
 - none
