@@ -30,6 +30,7 @@ PHP_CompatInfo ChangeLog
 * fix imagick reference (thanks to Remi Collet)
 * interfaces ArrayAcess, Iterator, IteratorAggregate, Serializable, Traversable
 were moved form SPL to Core since PHP 5.3.0
+* SimpleXMLIterator was moved from SPL (PHP 5.2) to SimpleXml (PHP 5.3)
 
 .Bug fixes:
 * none
